--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,8 @@
 {
   "version": 2,
   "name": "romix",
-  "builds": [
-    {
-      "src": "frontend/public/**",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/public/$1"
-    }
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/frontend/public/$1" }
   ]
 }
